1、添加mybatis入口函数 2、配置文件解析过程源码注释

--- a/mybatis-3-mybatis-3.5.4/pom.xml
+++ b/mybatis-3-mybatis-3.5.4/pom.xml
@@ -276,6 +276,24 @@
       <version>1.12.5</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.20</version>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <build>
